<resources>
    <string name="app_name">LifeCycle</string>
    <string name="button">Button</string>
    <string name="textview">Activity2</string>
    <string name="activity1">Activity1</string>
    <string name="last">L</string>
    <string name="next">Next</string>
    <string name="reload_content">Reload Context</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="text">Text</string>
    <string name="submit">Submit</string>
    <string name="frame_demo">Frame Demo</string>
    <string name="next_page">Next PAGE</string>
    <string name="button7">button7</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button9">button9</string>
    <string name="button8">button8</string>
    <string name="button11">button11</string>
    <string name="button12">button12</string>
    <string name="button13">button13</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button20">button20</string>
</resources>
